--- a/src/assets/scss/global/_fonts.scss
+++ b/src/assets/scss/global/_fonts.scss
@@ -10,7 +10,7 @@ $font-stack-semibold-weight: 600;
 $font-stack-bold: 'gentona-bold', 'Helvetica Neue', Roboto, sans-serif;
 $font-stack-bold-weight: 700;
 $flagship-icon: 'icomoon', 'gentona-semibold', 'Helvetica Neue', Roboto, sans-serif;
-$font-awesome: FontAwesome, 'gentona-semibold', 'Helvetica Neue', Roboto, sans-serif;
+$font-awesome: "Font Awesome 5 Free", 'gentona-semibold', 'Helvetica Neue', Roboto, sans-serif;
 
 @font-face {
   font-family: 'quadon-bold';
