--- a/src/assets/scss/modules/_footer.scss
+++ b/src/assets/scss/modules/_footer.scss
@@ -93,6 +93,7 @@
   .social-media {
     a {
       color: $skyblue;
+      margin-left: 1.375rem;
       &:hover {
         color: $bluejaysblue;
         transition: color 0.5s ease;
