--- a/src/assets/scss/templates/_directory-people.scss
+++ b/src/assets/scss/templates/_directory-people.scss
@@ -31,6 +31,9 @@
         margin-bottom: 1.75rem;
       }
     }
+    h3 {
+      font-size: 1.5rem;
+    }
     ul.contact {
       list-style: none;
       margin-left: 0;
